ffmpeg_filter: check that the input media type match the filter

Fixes Ticket2012

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>